--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,19 @@
 * {
   box-sizing: border-box;
 }
+
+.react-colorful__hue {
+  height: 8px !important;
+  margin-top: 14px;
+  border-radius: 8px !important;
+}
+
+.react-colorful__saturation {
+  border-radius: 4px !important;
+}
+
+.react-colorful__hue-pointer, .react-colorful__saturation-pointer {
+  height: 12px !important;
+  width: 12px !important;
+  border-radius: 12px !important;
+}
